--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <title>Blobs</title>
 </head>
 <body>
-    <svg></svg>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
